zrobiony end game i reset game

--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
     <script src="tower_script.js" defer></script>
 </head>
 <body>
-        <div id="stick1" class="sticks" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <div id="ring0" class="rings" draggable="true"></div>
-            <div id="ring1" class="rings" draggable="true"></div>
-            <div id="ring2" class="rings" draggable="true"></div>
-            <div id="ring3" class="rings" draggable="true"></div>
-            <div id="ring4" class="rings" draggable="true"></div>
-            <div id="ring5" class="rings" draggable="true"></div>
-            <div id="ring6" class="rings" draggable="true"></div>
-            <div id="ring7" class="rings" draggable="true"></div>
-        </div>
+        <div id="stick1" class="sticks" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     
         <div id="stick2" class="sticks" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     
