wersja zwykla i swiateczna

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
     <span id="span1">Czas na ułożenie wieży</span><input type="range" id="time_range">
     <span id="span2">Ilość krążków do ułożenia</span><input type="range" id="max_leng_range" min="3" max="8">
-    Clasic<input type="radio" name="radios" onclick="script_set(this)" value="tower_script_clasic.js">
-    Christmas<input type="radio" name="radios" onclick="script_set(this)" value="tower_script_christmas.js">
+    <span id="span3">Clasic</span><input type="radio" name="radios" id="radio1" onclick="script_set(this)" value="tower_script_clasic.js">
+    <span id="span4">Christmas</span><input type="radio" name="radios" id="radio2" onclick="script_set(this)" value="tower_script_christmas.js">
     <button onclick="start()" id="btn_start">Rozpocznij grę</button>
 </body>
 </html>
